fix: spacing and size

--- a/src/pages/SignUp/style.module.scss
+++ b/src/pages/SignUp/style.module.scss
@@ -3,9 +3,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 66%;
+  width: 33%;
   margin: 0 auto;
   & form {
     width: 100%;
+
+    &>button {
+      display: block;
+      margin: 0 auto;
+      margin-top: 1rem;
+      margin-bottom: 3rem;
+    }
   }
+    &>span {
+      font-size: 0.7rem;
+    }
 }
